@@ -17,8 +17,6 @@
 
 package org.apache.kafka.metadata.placement;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -31,7 +29,7 @@ public class TopicAssignment {
     private final List<PartitionAssignment> assignments;
 
     public TopicAssignment(List<PartitionAssignment> assignments) {
-        this.assignments = Collections.unmodifiableList(new ArrayList<>(assignments));
+        this.assignments = List.copyOf(assignments);
     }
 
     /**
@@ -43,8 +41,7 @@ public class TopicAssignment {
 
     @Override
     public boolean equals(Object o) {
-        if (!(o instanceof TopicAssignment)) return false;
-        TopicAssignment other = (TopicAssignment) o;
+        if (!(o instanceof TopicAssignment other)) return false;
         return assignments.equals(other.assignments);
     }
 
