@@ -24,7 +24,7 @@ import org.apache.kafka.metadata.PartitionRegistration;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -44,8 +44,8 @@ public class PartitionReassignmentRevertTest {
             }).
             setLeader(3).setLeaderRecoveryState(LeaderRecoveryState.RECOVERED).setLeaderEpoch(100).setPartitionEpoch(200).build();
         PartitionReassignmentRevert revert = new PartitionReassignmentRevert(registration);
-        assertEquals(Arrays.asList(3, 2, 1), revert.replicas());
-        assertEquals(Arrays.asList(3, 2), revert.isr());
+        assertEquals(List.of(3, 2, 1), revert.replicas());
+        assertEquals(List.of(3, 2), revert.isr());
         assertFalse(revert.unclean());
     }
 
@@ -60,8 +60,8 @@ public class PartitionReassignmentRevertTest {
             }).
             setRemovingReplicas(new int[]{2, 1}).setLeader(3).setLeaderRecoveryState(LeaderRecoveryState.RECOVERED).setLeaderEpoch(100).setPartitionEpoch(200).build();
         PartitionReassignmentRevert revert = new PartitionReassignmentRevert(registration);
-        assertEquals(Arrays.asList(3, 2, 1), revert.replicas());
-        assertEquals(Arrays.asList(3, 2), revert.isr());
+        assertEquals(List.of(3, 2, 1), revert.replicas());
+        assertEquals(List.of(3, 2), revert.isr());
         assertFalse(revert.unclean());
     }
 
@@ -78,8 +78,8 @@ public class PartitionReassignmentRevertTest {
             }).
             setAddingReplicas(new int[]{4, 5}).setLeader(3).setLeaderRecoveryState(LeaderRecoveryState.RECOVERED).setLeaderEpoch(100).setPartitionEpoch(200).build();
         PartitionReassignmentRevert revert = new PartitionReassignmentRevert(registration);
-        assertEquals(Arrays.asList(3, 2, 1), revert.replicas());
-        assertEquals(Arrays.asList(2), revert.isr());
+        assertEquals(List.of(3, 2, 1), revert.replicas());
+        assertEquals(List.of(2), revert.isr());
         assertFalse(revert.unclean());
     }
 
@@ -96,8 +96,8 @@ public class PartitionReassignmentRevertTest {
             }).
             setRemovingReplicas(new int[]{2}).setAddingReplicas(new int[]{4, 5}).setLeader(3).setLeaderRecoveryState(LeaderRecoveryState.RECOVERED).setLeaderEpoch(100).setPartitionEpoch(200).build();
         PartitionReassignmentRevert revert = new PartitionReassignmentRevert(registration);
-        assertEquals(Arrays.asList(3, 2, 1), revert.replicas());
-        assertEquals(Arrays.asList(2), revert.isr());
+        assertEquals(List.of(3, 2, 1), revert.replicas());
+        assertEquals(List.of(2), revert.isr());
         assertFalse(revert.unclean());
     }
 
@@ -114,8 +114,8 @@ public class PartitionReassignmentRevertTest {
             }).
             setRemovingReplicas(new int[]{2}).setAddingReplicas(new int[]{4, 5}).setLeader(3).setLeaderRecoveryState(LeaderRecoveryState.RECOVERED).setLeaderEpoch(100).setPartitionEpoch(200).build();
         PartitionReassignmentRevert revert = new PartitionReassignmentRevert(registration);
-        assertEquals(Arrays.asList(3, 2, 1), revert.replicas());
-        assertEquals(Arrays.asList(3), revert.isr());
+        assertEquals(List.of(3, 2, 1), revert.replicas());
+        assertEquals(List.of(3), revert.isr());
         assertTrue(revert.unclean());
     }
 }
